Fix modal overflow scroll

--- a/src/views/components/ModalBase/ModalBase.scss
+++ b/src/views/components/ModalBase/ModalBase.scss
@@ -4,13 +4,9 @@
   right: 0;
   left: auto;
   bottom: 0;
-  align-items: center;
   background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0;
-  width: 26rem;
+  padding: 2rem;
+  width: 32rem;
   transition-duration: 300ms;
   transition-timing-function: linear;
   transform: translate3d(100%, 0, 0);
@@ -18,6 +14,9 @@
 
 .content-after-open {
   transform: translate3d(0, 0, 0);
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .content-before-close {
